2009-04-18  Chris Toshok  <toshok@ximian.com>

	* GeneratedPInvokes.cs: regen.

2009-04-15  Alan McGovern  <amcgovern@novell.com>

	* Events.cs: All unhandled exceptions should go through the
	  UnhandledException event - this allows moonunit tests which
	  throw exceptions in callbacks to fail properly. I don't want
	  to remove our current error reporting as having a big error
	  message on screen is good for debugging. If people are happy
	  about removing the current reporting, just nuke the if/else.

2009-04-14  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* GeneratedPInvokes.cs: Regenerated.

	* Helper.cs:
	* NativeMethods.cs:
	* ManagedXamlLoader.cs:
	* MoonlightTypeConverter.cs:
	* MoonlightValueConverter.cs: Generate all P/Invoke methods.

2009-04-10  Jackson Harper  <jackson@ximian.com>

	* ManagedXamlLoader.cs: Unref objects after they are created in
	unmanaged.

2009-04-09  Jeffrey Stedfast  <fejj@novell.com>

	* Value.cs: Handle Kind.FONTSOURCE

2009-04-09  Sebastien Pouliot  <sebastien@ximian.com>

	* GeneratedPInvokes.cs: regen

2009-04-09  Jackson Harper  <jackson@ximian.com>

	* GeneratedPInvokes.cs: regen
	* XamlLoaderCallbacks.cs: Objects are created now, not just DependencyObjects.
	* ManagedXamlLoader.cs: We get Value*'s from
	CreateFromString/CreateFromFile now.

2009-04-07  Chris Toshok  <toshok@ximian.com>

	* NativeDependencyObjectHelper.cs (SetValue): we need specify type
	checking in the case of a genericly typed DP.
	Type.IsAssignableFrom is not enough.

2009-04-06  Chris Toshok  <toshok@ximian.com>

	* GeneratedPInvokes.cs: regen.

2009-04-06  Chris Toshok  <toshok@ximian.com>

	* Helper.cs (GCHandleInDomain): new method, use reflection to
	twiddle GCHandle.CheckCurrentDomain so we can check if an intptr
	is a valid GCHandle without throwing and catching exceptions.

	* ManagedXamlLoader.cs (LookupObject): use Helper.GCHandleInDomain
	instead of using exceptions.

2009-04-06  Jackson Harper  <jackson@ximian.com>
